# ros2_drc

./: .gitignore  LAUNCH_USAGE.md
rosbag2/rosbag2_2024_09_24-14_28_57/: metadata.yaml
rosbag2/rosbag2_2024_09_24-14_30_22/: metadata.yaml
src/draco_pointcloud_decoder/: CMakeLists.txt  package.xml
src/draco_pointcloud_decoder/launch/: decoder_receiver.launch.py
src/draco_pointcloud_decoder/src/: decoder_node.cpp
src/draco_pointcloud_encoder/: CMakeLists.txt  package.xml
src/draco_pointcloud_encoder/launch/: encoder_sender.launch.py  local_test.launch.py
src/draco_pointcloud_encoder/src/: bag_processor_node.cpp  encoder_node.cpp
src/draco_web_monitor/: package.xml  setup.cfg  setup.py
src/draco_web_monitor/draco_web_monitor/: web_monitor_node.py  web_server.py
src/draco_web_monitor/draco_web_monitor/templates/: index.html  test.html
