<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>draco_pointcloud_encoder</name>
  <version>1.0.0</version>
  <description>ROS2 node for compressing PointCloud2 messages using Google's Draco 3D compression library. Supports XYZ and intensity attributes with configurable compression levels and quantization.</description>
  <maintainer email="youngmo123@hanmail.net">youngmo</maintainer>
  <license>Apache-2.0</license>
  
  <url type="website">https://github.com/google/draco</url>
  <url type="repository">https://github.com/google/draco</url>
  
  <author email="youngmo123@hanmail.net">youngmo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
